Fixed (minor CSS issue) common inline-block message box not fitting up to parent container when needed

--- a/site/assets/css/flexicontent_rtl.css
+++ b/site/assets/css/flexicontent_rtl.css
@@ -714,7 +714,6 @@ body .fc-mssg-inline {
 body .fc-mssg-inline {
 	display: inline-block;
 	margin: 1px 0 2px 12px;
-	max-width: 62%;
 }
 body .fc-field-invalid {
 	padding: 4px 8px;
